--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -3,7 +3,7 @@
 
 .restaurant {
   background-color: $bg-grey;
-  padding: 3.9rem 1.1rem;
+  padding: 3.9rem 1.09rem 4rem 1.09rem;
 
   &__title {
     font-size: $fs-title;
